@@ -6,6 +6,8 @@ FrostWire 2.1.10 build 638 - MAY/19/2020
  - androidx.preference:preference:1.1.1
  - com.google.android.material:material:1.2.0-alpha06
  - androidx.exifinterface:exifinterface:1.2.0
+ - com.applovin:applovin-sdk:9.12.6
+ - com.mopub.mediation:applovin:9.12.5.0
 
 FrostWire 2.1.9 build 637 - MAR/05/2020
  - Album art display bug fixed
